--- a/timeline/index.html
+++ b/timeline/index.html
@@ -5,10 +5,24 @@
     <title>Timeline</title>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+
+    <link href='http://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
+
     <style type="text/css">
         #svgdiv {
-            margin: 10px;
+            margin: 0px;
+            padding: 0px;
         }
+        svg {
+            shape-rendering: crispEdges;
+            font-family: 'Alef', sans-serif;
+            margin: 0px;
+            padding: 0px;
+        }
+        .axis text {
+            font-size: 14px;
+        }
+
         .event {
             fill: lightblue;
             cursor: pointer;
@@ -81,27 +95,75 @@
             background-color: #eebeff;
         }
         #architecture.active {
-            background-color: #eebeff;
+            background-color: #cf4dff;
         }
         .btn.active {
             font-weight: bold;
             color: black;
+        }
+        #levels {
+            margin: 20px 0px;
+        }
+        #levels label {
+            width: 80px;
+            background-color: #edf1db;
+            color: #bbbbbb;
+        }
+        #levels label.active {
+            color: black;
+        }
+        #levels .glyphicon-user {
+            margin-left: -5px;
+        }
+        #help {
+            text-align: right;
+            margin: 10px 80px -30px 0px;
+        }
+        #levels,#genres {
+            margin-left: 20px;
         }
 
     </style>
 </head>
 <body>
 <div class='container'>
-<div id='sliderdiv'>
-    <div>Fewer</div>
-    <div id="slider"></div>
-    <div>More</div>
-</div>
-<div class='row'>
-    <div class='col-md-1'>
-        Genre
+
+    <div class='row'>
+    <div class="btn-group col-md-5" id="levels" data-toggle="buttons">
+        <label class="btn">
+            <input type="radio" name="levels" x-num="1">
+            <span class="glyphicon glyphicon-user"></span>
+        </label>
+        <label class="btn active">
+            <input type="radio" name="levels" x-num="2">
+            <span class="glyphicon glyphicon-user"></span>
+            <span class="glyphicon glyphicon-user"></span>
+        </label>
+        <label class="btn">
+            <input type="radio" name="levels" x-num="3">
+            <span class="glyphicon glyphicon-user"></span>
+            <span class="glyphicon glyphicon-user"></span>
+            <span class="glyphicon glyphicon-user"></span>
+        </label>
+        <label class="btn">
+            <input type="radio" name="levels" x-num="4">
+            <span class="glyphicon glyphicon-user"></span>
+            <span class="glyphicon glyphicon-user"></span>
+            <span class="glyphicon glyphicon-user"></span>
+            <span class="glyphicon glyphicon-user"></span>
+        </label>
+        <label class="btn">
+            <input type="radio" name="levels" x-num="5">
+            <span class="glyphicon glyphicon-user"></span>
+            <span class="glyphicon glyphicon-user"></span>
+            <span class="glyphicon glyphicon-user"></span>
+            <span class="glyphicon glyphicon-user"></span>
+            <span class="glyphicon glyphicon-user"></span>
+        </label>
     </div>
-    <div class="btn-group col-md-6" data-toggle="buttons">
+    </div>
+    <div class='row'>
+    <div class="btn-group col-md-6" id='genres' data-toggle="buttons">
         <label class="btn active" id='music'>
             <input type="checkbox"> Music
         </label>
@@ -116,6 +178,9 @@
         </label>
     </div>
 </div>
+    <div class='row' id='help'>
+        Click a bar to zoom. Double click background to unzoom.
+    </div>
 <div class='row' id='svgdiv'>
 </div>
 </div>
@@ -128,17 +193,25 @@
 <script type="text/javascript">
 
     var height = 1500, width = 600;
-    var margin = {left: 30,top: 30,right: 30,bottom:30};
+    var margin = {left: 30,top: 10,right: 30,bottom:30};
 
-    var maxLevel = 2;
+    var maxLevel = +$('#levels label.active input').attr('x-num');
     var yearFrom = 1500;
-    var yearTo = 2014;
+    var yearTo = 2000;
     var yinterval = 15;
 
-    $( "#slider" ).slider({min: 1, max: 5, step: 1, value: maxLevel, change: function(e,ui){
-        updateShowLevel(ui.value);
-    }});
+//    $( "#levels > label" ).on('click',function(e){
+//       console.log($(e.target).attr('x-num'));
+//    });
+//    $( "#levels input" ).on('click',function(e){
+//        console.log($(e.target).attr('x-num'));
+//    });
 
+    $('#levels label').change(function(e){
+        var lev = $(e.target).attr('x-num');
+        maxLevel = +lev;
+        updateFiltered();
+    });
     var xAxis,xAxis2;
     var xaxisobj,xaxisobj2;
 
@@ -207,7 +280,7 @@
     function bgDblClick(){
         if(zoomed){
             zoomed = false;
-            setYearRange(1500,2014);
+            setYearRange(1500,2000);
         }
     }
 
@@ -218,7 +291,7 @@
         if(zoomed){ // already zoomed in?
             zoomed = false;
             from = 1500;
-            to = 2014;
+            to = 2000;
         }else{
             zoomed = true;
 //         var cent = x.invert(event.x);
