--- a/timeline/index.html
+++ b/timeline/index.html
@@ -205,8 +205,12 @@
 </div>
 </div>
 
-<script src='d3.js'></script>
-<script src='underscore.js'></script>
+<!-- <script src='d3.js'></script> -->
+<!-- <script src='underscore.js'></script> -->
+
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js" charset="utf-8"></script>
+
 <script type="text/javascript" src='http://code.jquery.com/jquery-1.10.2.min.js'></script>
 <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
