--- a/timeline/index.html
+++ b/timeline/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Timeline</title>
+    <title>Art Timeline</title>
 
     <!-- https://developer.mozilla.org/en-US/docs/Mozilla/Mobile/Viewport_meta_tag -->
     <meta name="viewport" content="width=620, initial-scale=1">
@@ -136,18 +136,39 @@
             margin-left: 20px;
         }
 
-        h1 {
+        span.h1 {
             font-size: 25px;
             color: #804571;
             margin: 20px 0px 0px 20px;
         }
 
+        .fb-like {
+            margin: 10px 0px 0px 350px;
+        }
+
+        body {
+            width: 620px;
+            margin-top: 30px;
+        }
+
     </style>
 </head>
 <body>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div class='container'>
 
-<div class='row'><h1>Art Timeline</h1></div>
+<div class='row'><span class="h1">Art Timeline</span>
+
+</div>
     <div class='row'>
     <div class="btn-group" id="levels" data-toggle="buttons">
         <label class="btn">
@@ -203,6 +224,10 @@
     </div>
 <div class='row' id='svgdiv'>
 </div>
+    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="300" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+    <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
 </div>
 
 <!-- <script src='d3.js'></script> -->
