--- a/timeline/index.html
+++ b/timeline/index.html
@@ -7,6 +7,8 @@
     <!-- https://developer.mozilla.org/en-US/docs/Mozilla/Mobile/Viewport_meta_tag -->
     <meta name="viewport" content="width=620, initial-scale=1">
 
+    <meta property="og:image" content="http://hirokai.github.io/timeline/thumbnail.png"/>
+
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
 
