--- a/coauthors/index.html
+++ b/coauthors/index.html
@@ -2,7 +2,9 @@
 <html lang='en'>
 <head>
     <meta charset='utf-8'>
-    <title>Publication counts</title>
+    <meta property="og:image" 
+   content="thumbnail.jpg">
+    <title>Coauthor frequency histogram</title>
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
