--- a/coauthors/index.html
+++ b/coauthors/index.html
@@ -53,6 +53,14 @@
 
 </head>
 <body class='container'>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 <h1>Coauthor frequency histogram</h1>
 
@@ -93,6 +101,12 @@
 
     </div>
 </div>
+<div id='social' class='row'>
+    <div class="fb-like" data-href="http://hirokai.github.io/timeline" data-width="300" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+    <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    </div>
+</div>
 
 
 
@@ -104,6 +118,17 @@
 
 <script type="text/javascript" src="./example-opt.js"></script>
 <script type="text/javascript" src="./example-launcher.js"></script>
+
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-47555853-1', 'hirokai.github.io');
+    ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
