social buttons righttop

--- a/coauthors/index.html
+++ b/coauthors/index.html
@@ -79,9 +79,9 @@
             <select name="" id="pi-choice">
                 <option value=""></option>
                 <option value="groves">Jay T. Groves</option>
-                <option value="vale">Ronald D. Vale</option>
-                <option value="kuriyan">John Kuriyan</option>
-                <option value="dustin">Michael Dustin</option>
+                <option value="aida">Takuzo Aida</option>
+                <option value="whitesides">George Whitesides</option>
+                <option value="brenner">Sydney Brenner</option>
                 <!--                <option value="aida">Takuzo Aida</option>
                                 <option value="noji">Hiroyuki Noji</option>
                                 <option value="takeuchi">Shoji Takeuchi</option>
