--- a/about/contact.html
+++ b/about/contact.html
@@ -94,7 +94,7 @@
                 424 Stanley Hall<br>
                 University of California, Berkeley 94720<br>
                 USA<br>
-                Email: hkai at berkeley edu<br>
+                Email: hiroyukikai at berkeley edu<br>
                 Phone: +1-520-684-0412
             </div>
         </div>
