--- a/about/contact.html
+++ b/about/contact.html
@@ -95,7 +95,7 @@
                 University of California, Berkeley 94720<br>
                 USA<br>
                 <br>
-                Email: hiroyukikai at berkeley edu<br>
+                Email: hiroyukikai[at]berkeley[dot]edu<br>
                 Phone: +1-520-684-0412
             </div>
         </div>
