--- a/about/nanobio.html
+++ b/about/nanobio.html
@@ -102,7 +102,7 @@
         <div class="col-md-6">
             <h3>Gold nanoparticles</h3>
             <img src="img/nanodot.jpg"><br>
-            <p>Self-assembly of micelles on the glass substrate gives a regular array gold nanoparticles with controlled interparticle distances (40 nm-180 nm). While the difussion barrier by metal grids confines all the lipids and proteins into the limited area, these nanoparticles do not confine them. When the clusters of proteins are big enough compared to the interparticle distance of nanoparticles, the transport of the clusters is blocked. Using this technology, you can observe and manipulate the dynamic behavior of signaling clusters (Caculitan, Kai, Liu, et al. <a href="http://pubs.acs.org/doi/abs/10.1021/nl404514e"><i>Nano Lett.</i>&nbsp;2014</a>).</p>
+            <p>Self-assembly of micelles on the glass substrate gives a regular array of gold nanoparticles with controlled interparticle distances (40 nm-180 nm). While the diffusion barrier by metal grids confines all the lipids and proteins into the limited area, these nanoparticles do not confine them. When the clusters of proteins are big enough compared to the interparticle distance of nanoparticles, the transport of the clusters is blocked. Using this technology, you can observe and manipulate the dynamic behavior of signaling clusters (Caculitan, Kai, Liu, et al. <a href="http://pubs.acs.org/doi/abs/10.1021/nl404514e"><i>Nano Lett.</i>&nbsp;2014</a>).</p>
         </div>
     </div>
 </div>
