--- a/alignment/index.html
+++ b/alignment/index.html
@@ -62,14 +62,17 @@
 
 </head>
 <body>
+
+
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-    fjs.parentNode.insertBefore(js, fjs);
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1426094594315828&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+
 
 <div class="container">
     <div class='row'>
@@ -100,7 +103,9 @@
         <a href="http://www.ibm.com/developerworks/opensource/library/j-seqalign/index.html">Algorithm</a><br>
         <a href="https://github.com/hirokai/AlignmentVisualization">Source code</a><br>
             <div id="social">
-    <div class="fb-like" data-href="http://hirokai.github.io/timeline" data-width="300" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+    
+    <div class="fb-like" data-href="http://hirokai.github.io/alignment/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+    
     <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
