--- a/alignment/index.html
+++ b/alignment/index.html
@@ -99,9 +99,10 @@
         </div>
         <div class='row' id='svgdiv'></div>
         <footer>
+        <div>
             <p>Nucleobase: <span style='color: blue;'>matching</span>, <span style='color: #FF2A82;'>mismatch</span>, <span style='color: gray;'>missing</span></p>
             <a href="http://www.ibm.com/developerworks/opensource/library/j-seqalign/index.html">Algorithm</a><br>
-            <a href="https://github.com/hirokai/AlignmentVisualization">Source code</a><br>
+            <a href="https://github.com/hirokai/AlignmentVisualization">Source code</a></div>
             <div id="social">
                 <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
