--- a/about/programming.ja.html
+++ b/about/programming.ja.html
@@ -131,9 +131,11 @@
             </ul>
         </div>
         <div class="col-md-4">
-            <h2>データ可視化</h2>
-            D3.jsを使ったインタラクティブな可視化に興味があります。
+            <h2>データ分析・可視化</h2>
+            Webからのデータ収集や、D3.js/AngularJSなどを使ったインタラクティブな可視化に興味があります。
             <ul>
+                <li><a href="/jrecin/#/grid">JREC-IN検索</a></li>
+                <li><a href="/alignment/">Sequence alignment algorithm</a></li>
                 <li><a href="/coauthors/">Coauthor frequency histogram</a></li>
                 <li><a href="/timeline/">Art timeline</a></li>
             </ul>
