--- a/concentration/index.html
+++ b/concentration/index.html
@@ -85,5 +85,17 @@ box-shadow: 7px 7px 39px 0px rgba(0,0,0,0.75);
 </div>
 <div id='timer'></div>
 <div id='msg'></div>
+
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-47555853-1', 'hirokai.github.io');
+    ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
