Add Fiji scripts

--- a/about/programming.ja.html
+++ b/about/programming.ja.html
@@ -110,7 +110,13 @@
                 <li>細胞の画像から統計的特徴量を抽出します。複数のチャンネルの画像を同時に表示するGUIにより、細胞の座標選択を正確に行うことができます。</li>
                 <li>ImageJのプラグインとして、Scalaで書かれています。</li>
             </ul>
-
+            <h3><a href="https://gist.github.com/hirokai/7d7b89d35b9a6f87ef4b">Fijiスクリプト</a></h3>
+            <ul>
+                <li>Fijiでの画像処理でよく用いるタスクをまとめたもの。</li>
+                <li>バッチ処理、画像の切り抜き、チャネル重ね合わせなど。</li>
+                <li>Python (Jython)で書かれています。</li>
+                <li>Fijiでの画像処理スクリプト作成についての<a href="https://speakerdeck.com/hirokai/image-analysis-on-fiji-1">スライド（英語）</a></li>
+            </ul>
         </div>
         <div class="col-md-4">
             <h2>科学研究用ソフト</h2>
