--- a/about/programming.html
+++ b/about/programming.html
@@ -103,6 +103,13 @@
                 <li>Visualize population of cells by extracted metrics.</li>
                 <li>ImageJ plugin written in Scala.</li>
             </ul>
+            <h3><a href="https://gist.github.com/hirokai/7d7b89d35b9a6f87ef4b">Fiji scripts</a></h3>
+            <ul>
+                <li>Collection of small Fiji scripts for common tasks for image processing.</li>
+                <li>Useful for batch processing.</li>
+                <li>Written in Python (Jython).</li>
+                <li><a href="https://speakerdeck.com/hirokai/image-analysis-on-fiji-1">Slides</a> on introduction to Fiji scripting.</li>
+            </ul>
 
         </div>
         <div class="col-md-4">
