--- a/about/programming.ja.html
+++ b/about/programming.ja.html
@@ -135,6 +135,10 @@
                 <li>実験プロトコルと試料の情報をウェブ上で管理。</li>
                 <li>ScalaとPlay! frameworkで書かれています。</li> 
             </ul>
+            <h3><a href="../tools/index.ja.html">その他のツール</a></h3>
+            <ul>
+                <li>実験やデータ解析を効率化する細々としたツール。</li>
+            </ul>
         </div>
         <div class="col-md-4">
             <h2>データ分析・可視化</h2>
