--- a/about/programming.html
+++ b/about/programming.html
@@ -129,6 +129,10 @@
                 <li>Records experiments and sample information.</li>
                 <li>Written in Scala with Play! web framework.</li>  
             </ul>
+            <h3><a href="../tools/index.html">Other small tools</a></h3>
+            <ul>
+                <li>Makes experiment and data analysis more efficient.</li>
+            </ul>
         </div>
         <div class="col-md-4">
             <h2>Data visualization</h2>
