Add MdV and Histogram

--- a/tools/index.ja.html
+++ b/tools/index.ja.html
@@ -23,6 +23,16 @@
             <h1>物置：　科学研究用のツールなど</h1>
             研究の効率化のために書いた小さなツールを載せておきます。すべてウェブブラウザ上で動きます。
 
+            <h2>Multidimensional data viewer</h2>
+            <p><a href="http://hirokai.github.io/mdv/">Link</a></p>
+            <p><a href="https://github.com/hirokai/MicroManagerViewer">ソースコード</a></p>
+            多次元の画像データを直感的かつ高速に閲覧するツール（プロトタイプ）。
+            
+            <h2>Histogram</h2>
+            <p><a href="http://hirokai.github.io/histogram/">Link</a></p>
+            <p><a href="https://github.com/hirokai/HistogramD3">ソースコード</a></p>
+            複数系列のデータを簡単に表示できるヒストグラム。
+
             <h2>Yes/No checker</h2>
             <p><a href="http://hirokai.github.io/yesnochecker/">Link</a></p>
             <p><a href="https://github.com/hirokai/yesnochecker">ソースコード</a></p>
