--- a/tools/index.html
+++ b/tools/index.html
@@ -23,6 +23,16 @@
             <h1>Small tools for science experiments</h1>
             All of these run on a web browser.
 
+            <h2>Multidimensional data viewer</h2>
+            <p><a href="http://hirokai.github.io/mdv/">Link</a></p>
+            <p><a href="https://github.com/hirokai/MicroManagerViewer">Source code</a></p>
+            A prototype of a web app for viewing multidimensional images in an intuitive and flexible way. 
+            
+            <h2>Histogram</h2>
+            <p><a href="http://hirokai.github.io/histogram/">Link</a></p>
+            <p><a href="https://github.com/hirokai/HistogramD3">Source code</a></p>
+            A histogram viewer for multiple series.
+
             <h2>Yes/No checker</h2>
             <p><a href="http://hirokai.github.io/yesnochecker/">Link</a></p>
             <p><a href="https://github.com/hirokai/yesnochecker">Source code</a></p>
