--- a/positions/index.html
+++ b/positions/index.html
@@ -1,7 +1,7 @@
 <html lang='en'>
 <head>
     <meta charset='utf-8'>
-    <title>Positions</title>
+    <title>MicroManager Position Generator</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
