--- a/about/contact.ja.html
+++ b/about/contact.ja.html
@@ -98,13 +98,10 @@
         <div class="col-md-12">
             <div>
                 甲斐洋行 (Hiroyuki Kai) <br>
-                Department of Chemistry<br>
-                424 Stanley Hall<br>
-                University of California, Berkeley 94720<br>
-                USA<br>
+                東北大学　工学研究科　機械・知能系<br>
                 <br>
-                Email: hiroyukikai[at]berkeley[dot]edu<br>
-                Phone: +1-520-684-0412
+                Email: hk.biomems[at]gmail[dot]com<br>
+                Phone: +81-22-795-3586
             </div>
         </div>
     </div>
