--- a/about/index.html
+++ b/about/index.html
@@ -103,24 +103,25 @@
             </section>
             <section id='affiliation'>
                 <h3>Current affiliation</h3>
-                Graduate Student Researcher, University of California, Berkeley (from 2010).<br>
-                Supervisor: Prof. Jay T. Groves.
+                Matsuhiko Nishizawa Group in Division of Mechanical Engineering, Tohoku University (from April, 2015).<br>
             </section>
             <section id='research'>
                 <h3>Current topic of research</h3>
-                Spatiotemporal dynamics of juxtacrine signaling of T cells using (1) live-cell fluorescence microscopy and (2) nanofabricated materials.
+                    Development of flexible biosensors based on materials science and electrochemistry.
             </section>
             <section id='research-past'>
                 <h3>Past topics of research</h3>
-                <ul></ul>
+                <ul>
+                <li>Spatiotemporal dynamics of juxtacrine signaling of T cells using (1) live-cell fluorescence microscopy and (2) nanofabricated materials.</li>
                 <li>Supramolecular machines for remote transmission of molecular motion.</li>
                 <li>Nanofillers for toughening thermoplastics.</li>
                 <li>Thermoplastics made from cellulose derivatives and cashew extract.</li>
+                </ul>
             </section>
             <section id='experience'>
                 <h3>Education and experience</h3>
                 <ul>
-                    <li>2010-: PhD candidate, Department of Chemistry, University of California, Berkeley.</li>
+                    <li>2010-2015: Graduate Student Researcher, Department of Chemistry, University of California, Berkeley. PhD in Chemistry.</li>
                     <li>2008-2010: Researcher, Nanoelectronics Laboratory, NEC Corporation.</li>
                     <li>2006-2008: Department of Chemistry and Biotechnology, The University of Tokyo (Master of Engineering)</li>
                     <li>2002-2006: Department of Chemistry and Biotechnology, The University of Tokyo (Bachelor of Engineering)</li>
