--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -96,17 +96,17 @@
     <div class="row">
         <div class="col-md-12">
             <img src="img/welcome.jpg" width='105%' style="margin: -20px -50px 0px -20px;"><br>
-            <p class="lead">生物物理化学者です。T細胞シグナル伝達のダイナミクスを、ナノ加工したガラス基板を用いて蛍光イメージングにより研究しています。幅広いバックグラウンドを持ち、材料・情報・生物の分野融合研究に興味があります。</p>
+            <p class="lead">生物工学者です。幅広いバックグラウンドを持ち、材料・情報・生物の分野融合研究に興味があります。</p>
 
             <h3>現在の所属</h3>
-            カリフォルニア大学バークレー校　大学院生（2010年より）<br>
-            指導教官： Jay T. Groves教授
+            東北大学工学研究科機械・知能系バイオロボティクス専攻　西澤・梶研究室　特任助教（2015年4月より）<br>
 
             <h3>現在の研究</h3>
-            ナノ加工した材料を用いる、T細胞シグナリングの時空間制御のイメージング研究。  
+                電気化学・材料科学をベースとした、皮膚貼り付け型センサ等の開発              
 
             <h3>過去の研究</h3>
             <ul>
+                <li>ナノ加工した材料を用いる、T細胞シグナリングの時空間制御のイメージング研究</li>
                 <li>分子の動きを遠隔に伝える超分子機械の作製</li>
                 <li>熱可塑性樹脂の機械特性を向上させる自己組織化ナノフィラーの開発</li>
                 <li>セルロースとカルダノールからなる熱可塑性樹脂の開発</li>
@@ -114,7 +114,7 @@
 
             <h3>経歴</h3>
             <ul>
-                <li>2010-: PhD candidate, カリフォルニア大学バークレー校化学科大学院（指導教官：Jay T. Groves教授）</li>
+                <li>2010-2015: カリフォルニア大学バークレー校化学科大学院。PhD in Chemistry（指導教官：Jay T. Groves教授）</li>
                 <li>2008-2010: 日本電気ナノエレクトロニクス研究所</li>
                 <li>2006-2008: 東京大学大学院工学系研究科化学生命工学専攻　修士課程（指導教官：相田卓三教授）</li>
                 <li>2002-2006: 東京大学工学部化学生命工学科　学士課程</li>
