--- a/csvcombine/index.html
+++ b/csvcombine/index.html
@@ -56,12 +56,14 @@
                 <!--<button type="button" class="btn btn-default">Space</button>-->
                 <!--<button type="button" class="btn btn-default">Tab</button>-->
                 <!--</div>-->
-                <input type="checkbox" id="has_header" checked/>
-                <label id='has_header_label' for="has_header">Has header</label>
+
+                <!--<input type="checkbox" id="has_header" checked/>-->
+                <!--<label id='has_header_label' for="has_header">Has header</label>-->
+
                 <label for="skip_rows">Skip rows</label>
-                <input type="text" id="skip_rows" value="14"/>
+                <input type="text" id="skip_rows"/>
                 <label for="skip_rows">Columns</label>
-                <input type="text" id="used_columns" value="1,2"/>
+                <input type="text" id="used_columns"/>
                 <span id="info"></span>
             </div>
             <div>
