Add tips section in programming (stub)

--- a/about/programming.ja.html
+++ b/about/programming.ja.html
@@ -103,46 +103,57 @@
                 科学技術計算、可視化、プログラミング言語、ドメイン固有言語（DSL）によるプログラム合成、科学研究の生産性向上のためのツール開発など、プログラミングの様々な分野に興味があります。Haskell、Scalaといった抽象化能力が高く、強い型付けの言語を好んで使用します。
             </p>
         </div>
-        <div class="col-md-4">
-            <h2>画像処理</h2>
-            <h3><a href="https://github.com/hirokai/TCRAnalysis">TCRAnalysis</a></h3>
-            <ul>
-                <li>細胞の画像から統計的特徴量を抽出します。複数のチャンネルの画像を同時に表示するGUIにより、細胞の座標選択を正確に行うことができます。</li>
-                <li>ImageJのプラグインとして、Scalaで書かれています。</li>
-            </ul>
+        <div class="row">
+          <div class="col-md-12">
+              <h2>実験データを効率的に管理するための小技とスニペット集</h2>
+              <ul>
+                <li><a href="../tips/google_sheet_csv.html">PythonからGoogle Sheetsを読む</a></li>
+              </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+              <h2>画像処理</h2>
+              <h3><a href="https://github.com/hirokai/TCRAnalysis">TCRAnalysis</a></h3>
+              <ul>
+                  <li>細胞の画像から統計的特徴量を抽出します。複数のチャンネルの画像を同時に表示するGUIにより、細胞の座標選択を正確に行うことができます。</li>
+                  <li>ImageJのプラグインとして、Scalaで書かれています。</li>
+              </ul>
 
-        </div>
-        <div class="col-md-4">
-            <h2>科学研究用ソフト</h2>
-            <h3><a href='http://alocator.web.fc2.com/'>Article Locator</a></h3>
-            <ul>
-                <li>オンラインジャーナルを引用情報から探します。</li>
-                <li>JavaScriptで書かれています。</li>
-            </ul>
-            <h3><a href="http://paperserver.jp/">PaperServer</a></h3>
-            <ul>
-                <li>オンラインジャーナルの記事をウェブ上で管理。</li>
-                <li>HaskellとYesod web frameworkで書かれています。</li>
-            </ul>                            
-            <h3><a href="https://labnote.net">E-labnote</a></h3>
-            <ul>
-                <li>実験プロトコルと試料の情報をウェブ上で管理。</li>
-                <li>ScalaとPlay! frameworkで書かれています。</li> 
-            </ul>
-        </div>
-        <div class="col-md-4">
-            <h2>データ分析・可視化</h2>
-            Webからのデータ収集や、D3.js/AngularJSなどを使ったインタラクティブな可視化に興味があります。
-            <ul>
-                <li><a href="/jrecin/#/grid">JREC-IN検索</a></li>
-                <li><a href="/alignment/">Sequence alignment algorithm</a></li>
-                <li><a href="/coauthors/">Coauthor frequency histogram</a></li>
-                <li><a href="/timeline/">Art timeline</a></li>
-            </ul>
-        </div>
-        <div class="col-md-4">
-            <h2>型付きの科学計算</h2>
-            抽象化した簡潔な表記、静的型付けによりコンパイル時に正しさを検証できるような科学計算ライブラリの開発を始めています。
+          </div>
+          <div class="col-md-4">
+              <h2>科学研究用ソフト</h2>
+              <h3><a href='http://alocator.web.fc2.com/'>Article Locator</a></h3>
+              <ul>
+                  <li>オンラインジャーナルを引用情報から探します。</li>
+                  <li>JavaScriptで書かれています。</li>
+              </ul>
+              <h3><a href="http://paperserver.jp/">PaperServer</a></h3>
+              <ul>
+                  <li>オンラインジャーナルの記事をウェブ上で管理。</li>
+                  <li>HaskellとYesod web frameworkで書かれています。</li>
+              </ul>
+              <h3><a href="https://labnote.net">E-labnote</a></h3>
+              <ul>
+                  <li>実験プロトコルと試料の情報をウェブ上で管理。</li>
+                  <li>ScalaとPlay! frameworkで書かれています。</li>
+              </ul>
+          </div>
+          <div class="col-md-4">
+              <h2>データ分析・可視化</h2>
+              Webからのデータ収集や、D3.js/AngularJSなどを使ったインタラクティブな可視化に興味があります。
+              <ul>
+                  <li><a href="/jrecin/#/grid">JREC-IN検索</a></li>
+                  <li><a href="/alignment/">Sequence alignment algorithm</a></li>
+                  <li><a href="/coauthors/">Coauthor frequency histogram</a></li>
+                  <li><a href="/timeline/">Art timeline</a></li>
+              </ul>
+          </div>
+          <div class="col-md-4">
+              <h2>型付きの科学計算</h2>
+              抽象化した簡潔な表記、静的型付けによりコンパイル時に正しさを検証できるような科学計算ライブラリの開発を始めています。
+          </div>
+
         </div>
 
     </div>
@@ -154,6 +165,7 @@
         </div>
     </div>
 </div>
+
         </div>
 
     </div>
