Add another tip

--- a/about/programming.ja.html
+++ b/about/programming.ja.html
@@ -107,6 +107,7 @@
           <div class="col-md-12">
               <h2>実験データを効率的に管理するための小技とスニペット集</h2>
               <ul>
+                <li><a href="https://gist.github.com/hirokai/b012e97b4bc91c3ddcd2">（Macでの）Python環境構築からグラフのプロットまで</a></li>
                 <li><a href="https://gist.github.com/hirokai/349ea38076c54417d195">スクリプトからGoogle Sheetsを読む</a></li>
               </ul>
           </div>
