--- a/about/index.html
+++ b/about/index.html
@@ -129,6 +129,17 @@
             </section>
             <section id='publication'>
                 <h3>Publication</h3>
+                <ul class='researcher-id'>
+                  <li>
+                    ORCID: <a href="http://orcid.org/0000-0002-3544-9196">0000-0002-3544-9196</a>
+                  </li>
+                  <li>
+                    ResearcherID: <a href="http://www.researcherid.com/rid/H-8704-2015">H-8704-2015</a> <span id='badgeCont794084' style='width:26px'><script src='http://labs.researcherid.com/mashlets?el=badgeCont794084&mashlet=badge&showTitle=false&className=a&rid=H-8704-2015&size=small'></script></span>
+                  </li>
+                  <li>
+                    Scopus Author ID: <a href="http://www.scopus.com/authid/detail.uri?authorId=56763601000">56763601000</a>
+                  </li>
+                </ul>
                 <span style='margin-left: 20px;'>(&#x2021; indicates first coauthorship.)</span>
                 <ol class='publication' reversed>
                     
@@ -177,6 +188,7 @@
         </div>
     </div>
 </div>
+
         </div>
 
     </div>
