--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -102,7 +102,7 @@
             東北大学工学研究科機械・知能系バイオロボティクス専攻　西澤・梶研究室　特任助教（2015年4月より）<br>
 
             <h3>現在の研究</h3>
-                電気化学・材料科学をベースとした、皮膚貼り付け型センサ等の開発              
+                電気化学・材料科学をベースとした、皮膚貼り付け型センサ等の開発
 
             <h3>過去の研究</h3>
             <ul>
@@ -120,6 +120,18 @@
                 <li>2002-2006: 東京大学工学部化学生命工学科　学士課程</li>
             </ul>
             <h3>査読付き論文</h3>
+            <ul class='researcher-id'>
+              <li>
+                ORCID: <a href="http://orcid.org/0000-0002-3544-9196">0000-0002-3544-9196</a>
+              </li>
+              <li>
+                ResearcherID: <a href="http://www.researcherid.com/rid/H-8704-2015">H-8704-2015</a>
+                <span id='badgeCont794084' style='width:26px'><script src='http://labs.researcherid.com/mashlets?el=badgeCont794084&mashlet=badge&showTitle=false&className=a&rid=H-8704-2015&size=small'></script></span>                  </li>
+              </li>
+              <li>
+                Scopus Author ID: <a href="http://www.scopus.com/authid/detail.uri?authorId=56763601000">56763601000</a>
+              </li>
+            </ul>
             <span style='margin-left: 20px;'>（&#x2021;は共同筆頭著者）</span>
             <ol class='publication' reversed>
                 
@@ -165,6 +177,7 @@
         </div>
     </div>
 </div>
+
         </div>
 
     </div>
