--- a/about/programming.ja.html
+++ b/about/programming.ja.html
@@ -84,7 +84,7 @@
 
         <!-- Page content -->
         <div id="page-content-wrapper">
-        
+
 
 <div class="content-header">
     <h1>
@@ -109,6 +109,8 @@
               <ul>
                 <li><a href="https://gist.github.com/hirokai/b012e97b4bc91c3ddcd2">（Macでの）Python環境構築からグラフのプロットまで</a></li>
                 <li><a href="https://gist.github.com/hirokai/349ea38076c54417d195">スクリプトからGoogle Sheetsを読む</a></li>
+                <li><a href="https://gist.github.com/hirokai/c2a68e5d4b25fa46a6136c46226f8770">SciPyで任意の関数にカーブフィッティングする
+</a></li>
               </ul>
           </div>
         </div>
