Add another snippet

--- a/about/programming.ja.html
+++ b/about/programming.ja.html
@@ -109,8 +109,8 @@
               <ul>
                 <li><a href="https://gist.github.com/hirokai/b012e97b4bc91c3ddcd2">（Macでの）Python環境構築からグラフのプロットまで</a></li>
                 <li><a href="https://gist.github.com/hirokai/349ea38076c54417d195">スクリプトからGoogle Sheetsを読む</a></li>
-                <li><a href="https://gist.github.com/hirokai/c2a68e5d4b25fa46a6136c46226f8770">SciPyで任意の関数にカーブフィッティングする
-</a></li>
+                <li><a href="https://gist.github.com/hirokai/c2a68e5d4b25fa46a6136c46226f8770">SciPyで任意の関数にカーブフィッティングする</a></li>
+                <li><a href="https://gist.github.com/hirokai/807d05ddd9f749100e1b96f9d0422e66">FFmpegで動画から一定時間間隔のスナップショットを取得する</a></li>
               </ul>
           </div>
         </div>
