Add grants. Layout change.

--- a/about/contact.html
+++ b/about/contact.html
@@ -57,6 +57,10 @@
 <!--                <li class="sidebar-brand"><a href="#">Contents</a>
                 </li> -->
                 <li><a href="index.html">About</a>
+                <ul>
+                    <li><a href="publication.html">Publication</a></li>
+                    <li><a href="presentation.html">Presentations</a></li>
+                </ul>
                 </li>
                 <li><a  class='nohover' href="#">Interests</a>
                 <ul>
