--- a/about/index.html
+++ b/about/index.html
@@ -142,8 +142,8 @@
             <section id='grant'>
                 <h3>Research grants</h3>
                 <ol class='grant' reversed>
-                    <li>2017-2018 JSPS Grant-in-Aid for Young Scientists (B) &quot;Development of multiplexed microneedle array for vital senging on skin&quot;</li>
-                    <li>2017 COI research grant for collaborative research</li>
+                    <li>2017-2018 JSPS Grant-in-Aid for Young Scientists (B) &quot;Development of multiplexed microneedle array for vital senging on skin.&quot;</li>
+                    <li>2017 COI research grant for collaborative research by young researchers.</li>
                 </ol>
             </section>            
         </div>
