--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -142,6 +142,7 @@
             <section id='grant'>
                 <h3>競争的研究資金</h3>
                 <ol class='grant' reversed>
+                    <li>2017年度 東北大学附置研究所若手アンサンブルグラント（第一ステージ）「生体埋込センサの長寿命化のための多孔質ポリマーによるバイオフィルタの開発と評価」（分担）</li>
                     <li>2017-2018年度 科研費 若手(B)「皮膚生体情報のマルチモーダル計測のための微小針アレイの開発」</li>
                     <li>2017年度 COI若手連携研究ファンド「細胞外ATPを指標とする皮膚がん診断・薬剤投与パッチの開発」</li>
                 </ol>
