Update research description and paper.

--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -70,12 +70,15 @@
                     <li><a href="presentation.ja.html">学会発表</a></li>
                 </ul>
                 </li>
-                <li><a class='nohover' href="#">興味</a>
+                <li><a class='nohover' href="#">研究内容・興味</a>
                 <ul>
-                    <li><a href="signaling.ja.html">T細胞シグナリング</a></li>
-                    <li><a href="nanobio.ja.html">ナノ・バイオ境界</a></li>
-                    <li><a href="molecularmachine.ja.html">合成分子機械</a></li>
+                    <li><a href="skininterface.ja.html">皮膚インターフェイス</a></li>
                     <li><a href="programming.ja.html">プログラミング </a></li>
+                </ul>
+                <li><a class='nohover' href="#">過去の研究</a>
+                <ul>
+                    <li><a href="nanobio.ja.html">ナノバイオ</a></li>
+                    <li><a href="chemistry.ja.html">超分子機械・高分子材料</a></li>
                 </ul>
                 </li>
                 <li><a href="skills.ja.html">スキル</a>
@@ -119,7 +122,7 @@
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
             <h3>現在の所属</h3>
-            東北大学工学研究科機械・知能系　西澤・梶研究室　特任助教（2015年4月より）<br>
+            東北大学工学研究科機械・知能系　西澤・梶研究室　特任助教（JST COI-STREAM）（2015年4月より）<br>
 
             <h3>現在の研究</h3>
                 電気化学・材料科学をベースとした、皮膚貼り付け型センサ・治療デバイスの開発
@@ -133,18 +136,20 @@
 
             <h3>経歴</h3>
             <ul>
-                <li>2015-: 東北大学工学研究科西澤研究室　特任助教</li>
+                <li>2015-: 東北大学工学研究科西澤研究室　特任助教（JST COI-STREAM）</li>
                 <li>2010-2015: カリフォルニア大学バークレー校化学科大学院。PhD in Chemistry（指導教官：Jay T. Groves教授）</li>
                 <li>2008-2010: 日本電気ナノエレクトロニクス研究所</li>
                 <li>2006-2008: 東京大学大学院工学系研究科化学生命工学専攻　修士課程（指導教官：相田卓三教授）</li>
                 <li>2002-2006: 東京大学工学部化学生命工学科　学士課程</li>
             </ul>
             <section id='grant'>
-                <h3>競争的研究資金</h3>
+                <h3>競争的研究資金・研究助成</h3>
                 <ol class='grant' reversed>
+                    <li>2018年度 COI若手連携研究ファンド「皮膚組織液による皮膚がん診断・薬剤投与パッチの開発」（共同代表）</li>
+                    <li>2018年度 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」（代表）</li>
                     <li>2017年度 東北大学附置研究所若手アンサンブルグラント（第一ステージ）「生体埋込センサの長寿命化のための多孔質ポリマーによるバイオフィルタの開発と評価」（分担）</li>
-                    <li>2017-2018年度 科研費 若手(B)「皮膚生体情報のマルチモーダル計測のための微小針アレイの開発」</li>
-                    <li>2017年度 COI若手連携研究ファンド「細胞外ATPを指標とする皮膚がん診断・薬剤投与パッチの開発」</li>
+                    <li>2017-2018年度 科研費 若手(B)「皮膚生体情報のマルチモーダル計測のための微小針アレイの開発」（代表）</li>
+                    <li>2017年度 COI若手連携研究ファンド「細胞外ATPを指標とする皮膚がん診断・薬剤投与パッチの開発」（共同代表）</li>
                 </ol>
             </section>            
         </div>
