--- a/about/skills.ja.html
+++ b/about/skills.ja.html
@@ -70,12 +70,15 @@
                     <li><a href="presentation.ja.html">学会発表</a></li>
                 </ul>
                 </li>
-                <li><a class='nohover' href="#">興味</a>
+                <li><a class='nohover' href="#">研究内容・興味</a>
                 <ul>
-                    <li><a href="signaling.ja.html">T細胞シグナリング</a></li>
-                    <li><a href="nanobio.ja.html">ナノ・バイオ境界</a></li>
-                    <li><a href="molecularmachine.ja.html">合成分子機械</a></li>
+                    <li><a href="skininterface.ja.html">皮膚インターフェイス</a></li>
                     <li><a href="programming.ja.html">プログラミング </a></li>
+                </ul>
+                <li><a class='nohover' href="#">過去の研究</a>
+                <ul>
+                    <li><a href="nanobio.ja.html">ナノバイオ</a></li>
+                    <li><a href="chemistry.ja.html">超分子機械・高分子材料</a></li>
                 </ul>
                 </li>
                 <li><a href="skills.ja.html">スキル</a>
@@ -126,7 +129,7 @@
             <li>UV-Vis, IR</li>
             <li>Circular dichroism</li>
             <li>SEM</li>
-
+            <li>Cyclic voltammetry</li>
         </ul>
     </li>
 
@@ -149,9 +152,9 @@
     <li>Programming
         <ul>
             <li>Various programming languages (Scala, Haskell, JavaScript, C/C++, Matlab, Ruby, Python, Java, etc.)</li>
-            <li>Image and data analysis (scipy, OpenCV, scikit-learn, Halide, etc.)</li>
+            <li>Image and data analysis (SciPy, OpenCV, scikit-learn, Halide, pandas, etc.)</li>
             <li>Automation of experiment by scripting</li>
-            <li>Web app development (Play! framework, AngularJS, Meteor, etc.)</li>
+            <li>Web app development (Play! framework, Ruby on Rails, AngularJS, React, Meteor, etc.)</li>
             <li>Data visualization (D3.js)</li>
         </ul>
     </li>
