--- a/about/index.html
+++ b/about/index.html
@@ -54,20 +54,21 @@
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-<!--                <li class="sidebar-brand"><a href="#">Contents</a>
-                </li> -->
-                <li><a href="index.html">About</a>
+                <li><a href="index.html">Top</a>
                 <ul>
                     <li><a href="publication.html">Publication</a></li>
                     <li><a href="presentation.html">Presentations</a></li>
                 </ul>
                 </li>
-                <li><a  class='nohover' href="#">Interests</a>
+                <li><a class='nohover' href="#">Research interests</a>
                 <ul>
-                    <li><a href="signaling.html">Cell signaling</a></li>
-                    <li><a href="nanobio.html">Nano/bio interface</a></li>
-                    <li><a href="molecularmachine.html">Molecular machine</a></li>
-                    <li><a href="programming.html">Programming </a></li>
+                    <li><a href="skininterface.html">Epidermal interfaces</a></li>
+                    <li><a href="programming.html">Programming</a></li>
+                </ul>
+                <li><a class='nohover' href="#">Past projects</a>
+                <ul>
+                    <li><a href="nanobio.html">Nano-bio interfaces</a></li>
+                    <li><a href="chemistry.html">Chemistry</a></li>
                 </ul>
                 </li>
                 <li><a href="skills.html">Skills</a>
@@ -77,6 +78,7 @@
                 </li>
             </ul>
         </div>
+
 
         <!-- Page content -->
         <div id="page-content-wrapper">
@@ -113,7 +115,7 @@
             </section>
             <section id='affiliation'>
                 <h3>Current affiliation</h3>
-                Matsuhiko Nishizawa Group in Division of Mechanical Engineering, Tohoku University (from April, 2015).<br>
+                Department of Engineering, Tohoku University (from April, 2015).<br>
             </section>
             <section id='research'>
                 <h3>Current topic of research</h3>
@@ -142,6 +144,8 @@
             <section id='grant'>
                 <h3>Research grants</h3>
                 <ol class='grant' reversed>
+                    <li>2018 COI research grant for collaborative research by young researchers.</li>
+                    <li>2018 The Kao Science Encouragement Award.</li>
                     <li>2017 Tohoku University Research Institutes Ensemble Grant for Young Researchers.</li>
                     <li>2017-2018 JSPS Grant-in-Aid for Young Scientists (B): &quot;Development of multiplexed microneedle array for vital sensing on skin.&quot;</li>
                     <li>2017 COI research grant for collaborative research by young researchers.</li>
