--- a/about/nanobio.html
+++ b/about/nanobio.html
@@ -54,20 +54,21 @@
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-<!--                <li class="sidebar-brand"><a href="#">Contents</a>
-                </li> -->
-                <li><a href="index.html">About</a>
+                <li><a href="index.html">Top</a>
                 <ul>
                     <li><a href="publication.html">Publication</a></li>
                     <li><a href="presentation.html">Presentations</a></li>
                 </ul>
                 </li>
-                <li><a  class='nohover' href="#">Interests</a>
+                <li><a class='nohover' href="#">Research interests</a>
                 <ul>
-                    <li><a href="signaling.html">Cell signaling</a></li>
-                    <li><a href="nanobio.html">Nano/bio interface</a></li>
-                    <li><a href="molecularmachine.html">Molecular machine</a></li>
-                    <li><a href="programming.html">Programming </a></li>
+                    <li><a href="skininterface.html">Epidermal interfaces</a></li>
+                    <li><a href="programming.html">Programming</a></li>
+                </ul>
+                <li><a class='nohover' href="#">Past projects</a>
+                <ul>
+                    <li><a href="nanobio.html">Nano-bio interfaces</a></li>
+                    <li><a href="chemistry.html">Chemistry</a></li>
                 </ul>
                 </li>
                 <li><a href="skills.html">Skills</a>
@@ -77,6 +78,7 @@
                 </li>
             </ul>
         </div>
+
 
         <!-- Page content -->
         <div id="page-content-wrapper">
@@ -95,7 +97,7 @@
     <div class="row">
         <div class="col-md-12">
             <p class="lead">
-            Nanomaterials can be tailored to match the dimensions of signaling assemblies on the cell surface. I use top-down and bottom-up approaches to fabricate micro/nanostructures (40 nm-10 µm), and combine them with a supported lipid bilayer (SLB) to reveal spatiotemporal behavior of signaling assemblies on the T cell membrane.
+            Nanomaterials can be tailored to match the dimensions of signaling assemblies on the cell surface. I used top-down and bottom-up approaches to fabricate micro/nanostructures (40 nm-10 µm), and combine them with a supported lipid bilayer (SLB) to reveal spatiotemporal behavior of signaling assemblies on the T cell membrane.
             </p>
         </div>
         <div class="col-md-6">
