--- a/about/nanobio.ja.html
+++ b/about/nanobio.ja.html
@@ -70,12 +70,15 @@
                     <li><a href="presentation.ja.html">学会発表</a></li>
                 </ul>
                 </li>
-                <li><a class='nohover' href="#">興味</a>
+                <li><a class='nohover' href="#">研究内容・興味</a>
                 <ul>
-                    <li><a href="signaling.ja.html">T細胞シグナリング</a></li>
-                    <li><a href="nanobio.ja.html">ナノ・バイオ境界</a></li>
-                    <li><a href="molecularmachine.ja.html">合成分子機械</a></li>
+                    <li><a href="skininterface.ja.html">皮膚インターフェイス</a></li>
                     <li><a href="programming.ja.html">プログラミング </a></li>
+                </ul>
+                <li><a class='nohover' href="#">過去の研究</a>
+                <ul>
+                    <li><a href="nanobio.ja.html">ナノバイオ</a></li>
+                    <li><a href="chemistry.ja.html">超分子機械・高分子材料</a></li>
                 </ul>
                 </li>
                 <li><a href="skills.ja.html">スキル</a>
@@ -103,7 +106,7 @@
     <div class="row">
         <div class="col-md-12">
             <p class="lead">
-                サイズのコントロールされたミクロ／ナノ構造を用い、細胞表面のレセプターの集合体形成と輸送の動的挙動を操作・観察することができます。トップダウン型あるいはボトムアップ型のアプローチにより、数10 nm〜10 µmオーダーの微小構造を形成し、それとsupported lipid bilayer (SLB) を組み合わせることで、シグナル分子の集合体の動的挙動を研究しています。
+                サイズのコントロールされたミクロ／ナノ構造を用い、細胞表面のレセプターの集合体形成と輸送の動的挙動を操作・観察することができます。トップダウン型あるいはボトムアップ型のアプローチにより、数10 nm〜10 µmオーダーの微小構造を形成し、それとsupported lipid bilayer (SLB) を組み合わせることで、シグナル分子の集合体の動的挙動を研究しました。
             </p>
         </div>
         <div class="col-md-6">
