--- a/about/skills.html
+++ b/about/skills.html
@@ -54,20 +54,21 @@
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-<!--                <li class="sidebar-brand"><a href="#">Contents</a>
-                </li> -->
-                <li><a href="index.html">About</a>
+                <li><a href="index.html">Top</a>
                 <ul>
                     <li><a href="publication.html">Publication</a></li>
                     <li><a href="presentation.html">Presentations</a></li>
                 </ul>
                 </li>
-                <li><a  class='nohover' href="#">Interests</a>
+                <li><a class='nohover' href="#">Research interests</a>
                 <ul>
-                    <li><a href="signaling.html">Cell signaling</a></li>
-                    <li><a href="nanobio.html">Nano/bio interface</a></li>
-                    <li><a href="molecularmachine.html">Molecular machine</a></li>
-                    <li><a href="programming.html">Programming </a></li>
+                    <li><a href="skininterface.html">Epidermal interfaces</a></li>
+                    <li><a href="programming.html">Programming</a></li>
+                </ul>
+                <li><a class='nohover' href="#">Past projects</a>
+                <ul>
+                    <li><a href="nanobio.html">Nano-bio interfaces</a></li>
+                    <li><a href="chemistry.html">Chemistry</a></li>
                 </ul>
                 </li>
                 <li><a href="skills.html">Skills</a>
@@ -77,6 +78,7 @@
                 </li>
             </ul>
         </div>
+
 
         <!-- Page content -->
         <div id="page-content-wrapper">
@@ -119,7 +121,7 @@
             <li>UV-Vis, IR</li>
             <li>Circular dichroism</li>
             <li>SEM</li>
-
+            <li>Cyclic voltammetry</li>
         </ul>
     </li>
 
@@ -142,9 +144,9 @@
     <li>Programming
         <ul>
             <li>Various programming languages (Scala, Haskell, JavaScript, C/C++, Matlab, Ruby, Python, Java, etc.)</li>
-            <li>Image and data analysis (scipy, OpenCV, scikit-learn, Halide, etc.)</li>
+            <li>Image and data analysis (SciPy, OpenCV, scikit-learn, Halide, pandas, etc.)</li>
             <li>Automation of experiment by scripting</li>
-            <li>Web app development (Play! framework, AngularJS, Meteor, etc.)</li>
+            <li>Web app development (Play! framework, Ruby on Rails, AngularJS, React, Meteor, etc.)</li>
             <li>Data visualization (D3.js)</li>
         </ul>
     </li>
